--- a/ChromeExtension/manifest.json
+++ b/ChromeExtension/manifest.json
@@ -5,13 +5,13 @@
 	"manifest_version": 2,
 	 "content_scripts": [
 		{
-		  "matches": ["http://antiskimpas.nl/*"],
+		  "matches": ["https://progamerstore.com/wp-admin/*"],
 		  "css": ["css/style.css"],
 		  "js": ["js/jquery.js", "js/script.js"]
 		},
 		{
 		  // "matches": ["https://shoppingcart.aliexpress.com/order/confirm_order.htm"],
-		  "matches": ["*://*.aliexpress.com/*"],
+		  "matches": ["*://*.aliexpress.com/order/*"],
 		  "css": ["css/style.css"],
 		  "js": ["js/jquery.js", "js/script.js"]
 		}
